Landing header is improved

--- a/src/components/utilitified_decorations/Footer.astro
+++ b/src/components/utilitified_decorations/Footer.astro
@@ -27,11 +27,7 @@ const footerTitleClass =
   <div class="collapse collapse-arrow rounded-none">
     <input type="checkbox" class="peer" />
     <div class={`collapse-title ${footerTitleClass}`}>
-      <CascadeFundLogo
-        titleClassName="text-sm!"
-        imgClassName="h-5! w-5!"
-        className={footerTitleClass}
-      />
+      <CascadeFundLogo imgClassName="h-5! w-5!" className={footerTitleClass} />
     </div>
     <div class={`collapse-content ${footerContentClass}`}>
       <div class="grid md:grid-cols-2 gap-8">
