--- a/src/components/utilitified_decorations/Header.astro
+++ b/src/components/utilitified_decorations/Header.astro
@@ -1,6 +1,6 @@
 ---
 import CascadeFundLogo from "./Logo.astro";
-import LoginNavItem, { ActiveLoginNavItem } from "./LoginNavItem";
+import LoginNavItem from "./LoginNavItem";
 import WorkNavbar, { type ItemName } from "./WorkNavbar.astro";
 
 interface Props {
@@ -42,7 +42,7 @@ const { subtitle, active, hideLinks } = Astro.props;
           ><slot />
         </WorkNavbar>
       </div>
-      <CascadeFundLogo>{subtitle}</CascadeFundLogo>
+      <CascadeFundLogo />
     </div>
     <div class="navbar-center h-6 hidden lg:flex lg:min-w-[50vw]">
       <WorkNavbar
@@ -53,10 +53,7 @@ const { subtitle, active, hideLinks } = Astro.props;
       </WorkNavbar>
     </div>
     <div class="navbar-end flex h-6">
-      <LoginNavItem
-        className="py-1! px-2!"
-        active={active === ActiveLoginNavItem}
-      />
+      <LoginNavItem className="py-1! px-2!" />
     </div>
   </div>
 </header>
