Rename the login nav item to auth nav item

--- a/src/components/utilitified_decorations/Header.astro
+++ b/src/components/utilitified_decorations/Header.astro
@@ -1,6 +1,6 @@
 ---
 import CascadeFundLogo from "./Logo.astro";
-import LoginNavItem from "./LoginNavItem";
+import LoginNavItem from "./AuthNavItem";
 import WorkNavbar, { type ItemName } from "./WorkNavbar.astro";
 
 interface Props {
