--- a/src/components/utilitified_decorations/LandingHeader.astro
+++ b/src/components/utilitified_decorations/LandingHeader.astro
@@ -1,7 +1,7 @@
 ---
 import Row from "@/components/grid/ThreeColumnGrid.astro";
 import CascadeFundLogo from "./Logo.astro";
-import LoginNavItem from "./LoginNavItem";
+import LoginNavItem from "./AuthNavItem";
 import { GridStyle } from "@/types/eventTypes";
 import LandingNavbar, {
   type ItemName as LandingItemName,
