Improve the project link panel

--- a/src/components/issue/IssuePrioritificationPanel.astro
+++ b/src/components/issue/IssuePrioritificationPanel.astro
@@ -55,7 +55,7 @@ import { getIcon } from "../icon";
 
   <PageLikePanel
     title="Turn Into Rating Issue"
-    actions={[{ children: "Save", href: "/issue" }]}
+    actions={[{ children: "Save", uri: "/issue" }]}
     bg="green-100"
   >
     <div class="flex items-center justify-between text-xs text-gray-600">
