--- a/src/pages/data/issue/post.astro
+++ b/src/pages/data/issue/post.astro
@@ -58,7 +58,7 @@ const backHref = isForOriginal
       {
         variant: "blue",
         children: "Next",
-        href: "/data/issue",
+        uri: "/data/issue",
       },
     ]}
   />
