--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -207,7 +207,7 @@ const ctaSection: SectionProps = {
     bg={ctaSection.bg}
     actions={[
       {
-        href: "/login",
+        uri: "/login",
         variant: "primary",
         children: "Sign In as a Maintainer",
       },
