--- a/src/pages/influencer/confirmed.astro
+++ b/src/pages/influencer/confirmed.astro
@@ -40,7 +40,7 @@ import NotificationBanner from "@/components/NotificationBanner";
     actions={[
       {
         children: '"CascadeFund" Influencer',
-        href: "/inlfuencer/project",
+        uri: "/inlfuencer/project",
       },
     ]}
   >
