--- a/src/pages/login/index.astro
+++ b/src/pages/login/index.astro
@@ -39,7 +39,7 @@ import InfoPanel from "@/components/panel/InfoPanel";
     actions={[
       {
         children: '"CascadeFund" Influencer',
-        href: "/inlfuencer/project",
+        uri: "/inlfuencer/project",
       },
     ]}
   >
