--- a/src/pages/meta/contributor.astro
+++ b/src/pages/meta/contributor.astro
@@ -181,12 +181,12 @@ const projectStats = [
       {
         variant: "blue",
         children: "Sign In as a Contributor",
-        href: "/login?role=contributor",
+        uri: "/login?role=contributor",
       },
       {
         variant: "gray",
         children: "Browse Projects",
-        href: "/data/projects",
+        uri: "/data/projects",
       },
     ]}
     icon={getIcon("dev")}
