--- a/src/pages/meta/team.astro
+++ b/src/pages/meta/team.astro
@@ -182,7 +182,7 @@ const teamMembers: ProfileProps[] = [
       {
         variant: "blue",
         children: "Sign In as a Maintainer",
-        href: "/login",
+        uri: "/login",
       },
     ]}
   >
