--- a/src/pages/meta/work.astro
+++ b/src/pages/meta/work.astro
@@ -415,7 +415,7 @@ const scenarios: Scenario[] = [
       {
         variant: "green",
         children: "Start adding your project",
-        href: "/login",
+        uri: "/login",
       },
     ]}
   >
