--- a/src/pages/data/project/post.astro
+++ b/src/pages/data/project/post.astro
@@ -56,7 +56,7 @@ const createdIssueId =
                 actions={[
                         {
                                 children: '"CascadeFund" Influencer',
-                                href: "/inlfuencer/project",
+                                uri: "/inlfuencer/project",
                         },
                 ]}
         >
