Move menu to the menu panel

--- a/src/components/utilitified_decorations/WorkNavbar.astro
+++ b/src/components/utilitified_decorations/WorkNavbar.astro
@@ -1,6 +1,6 @@
 ---
 import Badge from "@/components/custom-ui/Badge";
-import MenuItem from "../panel/MenuItem";
+import MenuItem from "../menu/MenuItem";
 
 export enum ItemName {
   ProjectList = "ProjectList",
